Popover overflow fix 2

--- a/src/assets/less/weed/popover.less
+++ b/src/assets/less/weed/popover.less
@@ -50,7 +50,7 @@
   font-family: @system-font-family;
   color: @system-text-color;
   font-size: 12px;
-  overflow: hidden;
+  //overflow: hidden;
 
   &.top {
     margin-top: -10px;
@@ -155,7 +155,6 @@
 
   .popover-footer {
     padding: @popover-footer-padding-vertical @popover-footer-padding-horizontal;
-    background-color: @popover-footer-background-color;
     .popover-footer-buttons{
       .button{
         float: right;
